--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="periwinkle">#b6caff</color>
+    <color name="pale_dark_blue">#5fa8d3</color>
+    <color name="pale_blue">#cae9ff</color>
+    <color name="navy_blue">#1b4965</color>
+    <color name="light_teal">#bee9e8</color>
 </resources>
