--- a/app/src/main/res/layout/add_repository_activity.xml
+++ b/app/src/main/res/layout/add_repository_activity.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@color/background"
     android:layout_height="match_parent">
 
         <TextView
@@ -8,7 +9,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/add_repository"
-            android:textColor="@color/pale_dark_blue"
+            android:textColor="@color/btn_txt_color"
             android:gravity="center"
             android:textAllCaps="true"
             android:layout_marginTop="@dimen/_15sdp"
@@ -38,7 +39,7 @@
                 android:layout_marginTop="@dimen/_5sdp"
                 android:paddingTop="@dimen/_15sdp"
                 android:paddingBottom="@dimen/_15sdp"
-                android:backgroundTint="@color/pale_blue"
+                android:backgroundTint="@color/edit_text_clr"
                 android:textColorHint="@color/light_black"
                 android:fontFamily="@font/manrope_regular"
                 android:background="@drawable/rectangle_border_corner"
@@ -47,7 +48,7 @@
                 android:paddingStart="@dimen/_10sdp"
                 android:paddingEnd="@dimen/_10sdp"
                 android:singleLine="true"
-                android:textColor="@color/navy_blue"
+                android:textColor="@color/btn_txt_color"
                 android:textSize="@dimen/_12sdp"
                 android:visibility="visible" />
 
@@ -59,7 +60,7 @@
                 android:layout_marginTop="@dimen/_20sdp"
                 android:paddingTop="@dimen/_15sdp"
                 android:paddingBottom="@dimen/_15sdp"
-                android:backgroundTint="@color/pale_blue"
+                android:backgroundTint="@color/edit_text_clr"
                 android:fontFamily="@font/manrope_regular"
                 android:gravity="start|center"
                 android:background="@drawable/rectangle_border_corner"
@@ -68,7 +69,7 @@
                 android:paddingStart="@dimen/_10sdp"
                 android:paddingEnd="@dimen/_10sdp"
                 android:singleLine="true"
-                android:textColor="@color/navy_blue"
+                android:textColor="@color/btn_txt_color"
                 android:textSize="@dimen/_12sdp"
                 android:visibility="visible" />
 
@@ -87,7 +88,7 @@
         android:layout_marginEnd="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_15sdp"
         android:background="@drawable/rectangle_border_corner"
-        android:backgroundTint="@color/pale_dark_blue"
+        android:backgroundTint="@color/btn_txt_color"
         android:fontFamily="@font/manrope_regular"
         android:gravity="center"
         android:paddingLeft="@dimen/_25sdp"
@@ -95,7 +96,7 @@
         android:paddingVertical="@dimen/_7sdp"
         android:text="@string/add"
         android:textAllCaps="true"
-        android:textColor="@color/white"
+        android:textColor="@color/background"
         android:textSize="@dimen/_13sdp"
         android:visibility="visible" />
 
