--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,9 +8,9 @@
     <color name="black">#FF000000</color>
     <color name="light_black">#54000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="periwinkle">#b6caff</color>
-    <color name="pale_dark_blue">#5fa8d3</color>
-    <color name="pale_blue">#cae9ff</color>
-    <color name="navy_blue">#1b4965</color>
-    <color name="light_teal">#bee9e8</color>
+
+    <color name="background">#e3e3e1</color>
+    <color name="card_color">#fdfdfd</color>
+    <color name="btn_txt_color">#505050</color>
+    <color name="edit_text_clr">#ececea</color>
 </resources>
